diesel_compile_tests/tests/fail/ordering_functions_require_ord.stderr
error[E0277]: the trait bound `diesel::sql_types::Bool: SqlOrd` is not satisfied
  --> tests/fail/ordering_functions_require_ord.rs:13:38
   |
13 |     let source = stuff::table.select(max(stuff::b));
   |                                      ^^^ the trait `SqlOrd` is not implemented for `diesel::sql_types::Bool`
   |
   = help: the following other types implement trait `SqlOrd`:
             Array<T>
             BigInt
             Datetime
             Interval
             Nullable<T>
             Unsigned<BigInt>
             Unsigned<diesel::sql_types::Integer>
             Unsigned<diesel::sql_types::SmallInt>
           and $N others
   = note: required for `diesel::sql_types::Bool` to implement `diesel::expression::functions::aggregate_ordering::private::SqlOrdAggregate`
note: required by a bound in `diesel::dsl::max`
  --> $DIESEL/src/expression/functions/aggregate_ordering.rs
   |
   |     fn max<ST: SqlOrdAggregate>(expr: ST) -> ST::Ret;
   |                ^^^^^^^^^^^^^^^ required by this bound in `max`

error[E0277]: the trait bound `diesel::sql_types::Bool: SqlOrd` is not satisfied
  --> tests/fail/ordering_functions_require_ord.rs:13:31
   |
13 |     let source = stuff::table.select(max(stuff::b));
   |                               ^^^^^^ the trait `SqlOrd` is not implemented for `diesel::sql_types::Bool`
   |
   = help: the following other types implement trait `SqlOrd`:
             Array<T>
             BigInt
             Datetime
             Interval
             Nullable<T>
             Unsigned<BigInt>
             Unsigned<diesel::sql_types::Integer>
             Unsigned<diesel::sql_types::SmallInt>
           and $N others
   = note: required for `diesel::sql_types::Bool` to implement `diesel::expression::functions::aggregate_ordering::private::SqlOrdAggregate`
   = note: required for `diesel::expression::functions::aggregate_ordering::max::max<diesel::sql_types::Bool, columns::b>` to implement `diesel::Expression`
   = note: required for `stuff::table` to implement `SelectDsl<diesel::expression::functions::aggregate_ordering::max::max<diesel::sql_types::Bool, columns::b>>`

error[E0277]: the trait bound `diesel::sql_types::Bool: SqlOrd` is not satisfied
  --> tests/fail/ordering_functions_require_ord.rs:14:38
   |
14 |     let source = stuff::table.select(min(stuff::b));
   |                                      ^^^ the trait `SqlOrd` is not implemented for `diesel::sql_types::Bool`
   |
   = help: the following other types implement trait `SqlOrd`:
             Array<T>
             BigInt
             Datetime
             Interval
             Nullable<T>
             Unsigned<BigInt>
             Unsigned<diesel::sql_types::Integer>
             Unsigned<diesel::sql_types::SmallInt>
           and $N others
   = note: required for `diesel::sql_types::Bool` to implement `diesel::expression::functions::aggregate_ordering::private::SqlOrdAggregate`
note: required by a bound in `diesel::dsl::min`
  --> $DIESEL/src/expression/functions/aggregate_ordering.rs
   |
   |     fn min<ST: SqlOrdAggregate>(expr: ST) -> ST::Ret;
   |                ^^^^^^^^^^^^^^^ required by this bound in `min`

error[E0277]: the trait bound `diesel::sql_types::Bool: SqlOrd` is not satisfied
  --> tests/fail/ordering_functions_require_ord.rs:14:31
   |
14 |     let source = stuff::table.select(min(stuff::b));
   |                               ^^^^^^ the trait `SqlOrd` is not implemented for `diesel::sql_types::Bool`
   |
   = help: the following other types implement trait `SqlOrd`:
             Array<T>
             BigInt
             Datetime
             Interval
             Nullable<T>
             Unsigned<BigInt>
             Unsigned<diesel::sql_types::Integer>
             Unsigned<diesel::sql_types::SmallInt>
           and $N others
   = note: required for `diesel::sql_types::Bool` to implement `diesel::expression::functions::aggregate_ordering::private::SqlOrdAggregate`
   = note: required for `diesel::expression::functions::aggregate_ordering::min::min<diesel::sql_types::Bool, columns::b>` to implement `diesel::Expression`
   = note: required for `stuff::table` to implement `SelectDsl<diesel::expression::functions::aggregate_ordering::min::min<diesel::sql_types::Bool, columns::b>>`
